--- a/View/CompSettingDialog.xaml
+++ b/View/CompSettingDialog.xaml
@@ -1,10 +1,11 @@
 ﻿<ContentDialog
-    x:Class="PCClubApp.View.CompSettingDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PCClubApp.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Custom="using:Microsoft.UI.Xaml.Controls"
+    x:Class="PCClubApp.View.CompSettingDialog"
     mc:Ignorable="d"
     Title="Computer"
     PrimaryButtonText="Отмена"
@@ -14,7 +15,18 @@
 
     <Grid Height="250">
         <TextBox x:Name="macAddressBox" Height="45" PlaceholderText="MacAddress" TextChanged="Box_TextChanged" />
-       <TextBox x:Name="numberBox" Height="45" Margin="0,177,0,28" PlaceholderText="Номер" InputScope="Number" TextChanged="Box_TextChanged" />
-        <TextBox x:Name="ClubBox" Height="45" Margin="0,27,0,178" PlaceholderText="Club Id" InputScope="Number" TextChanged="Box_TextChanged" />
+        <TextBox x:Name="numberBox" Height="45" Margin="0,177,0,28" PlaceholderText="Номер" InputScope="Number" TextChanged="Box_TextChanged" />
+        <ComboBox x:Name="ClubBox" Height="45" Margin="0,27,0,0" PlaceholderText="Club Id" HorizontalAlignment="Stretch" SelectionChanged="ClubBox_SelectionChanged"  >
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ProgressRing x:Name="activeRing" HorizontalAlignment="Right" Margin="0,38,16,0" Height="24" Width="24" IsActive="true" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
+            <ProgressRing.RenderTransform>
+                <CompositeTransform ScaleY="-1"/>
+            </ProgressRing.RenderTransform>
+        </ProgressRing>
     </Grid>
 </ContentDialog>
