--- a/View/ProfileInfo.xaml
+++ b/View/ProfileInfo.xaml
@@ -2,19 +2,23 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PCClubApp.View"
+    xmlns:localAV="using:PCClubApp.View.SupportViews"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Custom="using:Microsoft.UI.Xaml.Controls"
+    xmlns:Custom="using:Microsoft.UI.Xaml.Controls" xmlns:localAV1="using:PCClubApp.View.supportViews"
     x:Class="PCClubApp.View.ProfileInfo"
     mc:Ignorable="d"
     d:DesignHeight="800"
     d:DesignWidth="1620">
 
     <Grid>
-        <Image Source="/Assets/Group 564.png" x:Name="ProfileImageRect" HorizontalAlignment="Left" Height="152" Margin="100,32,0,0" VerticalAlignment="Top" Width="152">
+
+        <localAV1:PhotoProfileView x:Name="AccPicsView" Margin="111,264,0,36" HorizontalAlignment="Left" Width="296" Visibility="Collapsed"/>
+
+        <Image  Source="/Assets/Group 564.png" x:Name="ProfileImageRect" HorizontalAlignment="Left" Height="152" Margin="100,32,0,0" VerticalAlignment="Top" Width="152">
 
         </Image>
-        <Button Content="Загрузить новую" Margin="100,210,0,0" VerticalAlignment="Top" Width="152" Height="19" FontSize="9" Padding="8,1,8,3" HorizontalContentAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
+        <Button Content="Загрузить новую" Margin="100,210,0,0" VerticalAlignment="Top" Width="152" Height="19" FontSize="9" Padding="8,1,8,3" HorizontalContentAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" Foreground="#FF98A2A5" Click="Button_Click"/>
         <Button Content="Удалить" Margin="100,229,0,0" VerticalAlignment="Top" Width="152" Height="19" FontSize="9" Padding="8,1,8,3" HorizontalContentAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF98A2A5"/>
         <TextBlock HorizontalAlignment="Left" Margin="439,32,0,0" Text="Логин" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
         <TextBox x:Name="AccLoginBox" HorizontalAlignment="Left" Margin="439,56,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="725" Foreground="#FFDAF0F5" Background="#CC232836" BorderBrush="{x:Null}" Height="45" Padding="10,10,6,2" FontSize="16"/>
